--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
   "name": "bookmarks-box",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "description": "提高对书签的便捷管理，支持对书签的增删改查",
   "background": {
-    "service_worker": "src/pages/background/index.js"
+    "service_worker": "background.js"
   },
   "action": {
     "default_popup": "src/pages/popup/index.html",
